--- a/index.html
+++ b/index.html
@@ -9,33 +9,36 @@
   </head>
   <body>
     <div class="container">
-     <h1>Language Suggester</h1>
-       <p>Take a survey to find out which programming language suits you best!</p>
-     <h2>Do you like solving problems?</h2>
-      <select class="form-control" id="question-one">
-        <option value="1">Yes</option>
-        <option value="2">No</option>
-      </select>
-     <h2>Are you good at math?<h2>
-      <select class="form-control" id="quetion-two">
-        <option value="1">Yes</option>
-        <option value="2">No</option>
-      </select>
-     <h2>Are you creative?</h2>
-      <select class="form-control" id="question-three">
-        <option value="1">Yes</option>
-        <option value="2">No</option>
-      </select>
-    <h2>Do you have prior coding experience?</h2>
-      <select class="form-control" id="question-four">
-        <option value="1">Yes</option>
-        <option value="2">No</option>
-      </select>
-    <h2>Are you detail oriented?</h2>
-      <select class="form-control" id="question-five">
-        <option value="1">Yes</option>
-        <option value="2">No</option>
-      </select>
+      <div class="jumbotron well">
+        <h1>Language Suggester</h1>
+          <p>Take a survey to find out which programming language suits you best!</p>
+          <h2>Do you like solving problems?</h2>
+          <select class="form-control" id="question-one">
+            <option value="1">Yes</option>
+            <option value="2">No</option>
+          </select>
+          <h2>Are you good at math?<h2>
+            <select class="form-control" id="quetion-two">
+              <option value="1">Yes</option>
+              <option value="2">No</option>
+            </select>
+            <h2>Are you creative?</h2>
+            <select class="form-control" id="question-three">
+              <option value="1">Yes</option>
+              <option value="2">No</option>
+            </select>
+            <h2>Do you have prior coding experience?</h2>
+            <select class="form-control" id="question-four">
+              <option value="1">Yes</option>
+              <option value="2">No</option>
+            </select>
+            <h2>Are you detail oriented?</h2>
+            <select class="form-control" id="question-five">
+              <option value="1">Yes</option>
+              <option value="2">No</option>
+            </select>
+            
+      </div>
     </div>
   </body>
 </html>
