added some Javascript.

--- a/index.html
+++ b/index.html
@@ -15,30 +15,38 @@
           <h2>Do you like solving problems?</h2>
           <select class="form-control" id="question-one">
             <option value="1">Yes</option>
-            <option value="2">No</option>
+            <option value="0">No</option>
           </select>
           <h2>Are you good at math?<h2>
             <select class="form-control" id="quetion-two">
               <option value="1">Yes</option>
-              <option value="2">No</option>
+              <option value="0">No</option>
             </select>
             <h2>Are you creative?</h2>
             <select class="form-control" id="question-three">
               <option value="1">Yes</option>
-              <option value="2">No</option>
+              <option value="0">No</option>
             </select>
             <h2>Do you have prior coding experience?</h2>
             <select class="form-control" id="question-four">
               <option value="1">Yes</option>
-              <option value="2">No</option>
+              <option value="0">No</option>
             </select>
             <h2>Are you detail oriented?</h2>
             <select class="form-control" id="question-five">
               <option value="1">Yes</option>
-              <option value="2">No</option>
+              <option value="0">No</option>
             </select>
-            
+            <h2>Are you looking to pursure a career in coding</h2>
+            <select class="form-control" id="question-six">
+              <option value="1">Yes</option>
+              <option value="0">No</option>
+            </select>
+
       </div>
+        <h3 id="JavaScript">You should try JavaScript!</h3>
+
+
     </div>
   </body>
 </html>
