--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
               <option value="1">Yes</option>
               <option value="0">No</option>
             </select>
-
+            <input type="submit" value="Submit">
       </div>
-        <h3 id="JavaScript">You should try JavaScript!</h3>
-
-
-    </div>
-  </body>
+        <div id="score">
+          <h3 id="result-one">You should try JavaScript!</h3>
+          <h3 id="result-two">You got Ruby</h3>
+          <h3 id ="result-three">You got Python</h3>
+        </div>
+      </div>
+    </body>
 </html>
