add buisness & user interface to code.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <h1>Language Suggester</h1>
           <p>Take a survey to find out which programming language suits you best!</p>
           <h2>Do you like solving problems?</h2>
+         <form id = "survey">
           <select class="form-control" id="question-one">
             <option value="1">Yes</option>
             <option value="0">No</option>
           </select>
           <h2>Are you good at math?<h2>
-            <select class="form-control" id="quetion-two">
+            <select class="form-control" id="question-two">
               <option value="1">Yes</option>
               <option value="0">No</option>
             </select>
@@ -42,12 +43,13 @@
               <option value="1">Yes</option>
               <option value="0">No</option>
             </select>
-            <input type="submit" value="Submit">
-      </div>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
         <div id="score">
           <h3 id="result-one">You should try JavaScript!</h3>
-          <h3 id="result-two">You got Ruby</h3>
-          <h3 id ="result-three">You got Python</h3>
+          <h3 id="result-two">You got Ruby!</h3>
+          <h3 id ="result-three">You got Python!</h3>
         </div>
       </div>
     </body>
